objects/Team_Members__c.object
<CustomObject>
    <label>Team Members</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Team Members</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Scrum_Owner__c</fullName>
        <formula>(Scrum_Manager__r.Owner:User.FirstName) + &quot; &quot; + (Scrum_Manager__r.Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scrum Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scrum_Manager__c</fullName>
        <label>Scrum Manager</label>
        <referenceTo>Scrum_Manager__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Tester__c</fullName>
        <formula>(Scrum_Manager__r.Primary_Tester__r.FirstName) + &quot; &quot; + (Scrum_Manager__r.Primary_Tester__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Tester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>(Scrum_Manager__r.Project_Manager__r.FirstName) + &quot; &quot; + (Scrum_Manager__r.Project_Manager__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fifth_cons_end_date__c</fullName>
        <label>Assign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>third_cons_end_date__c</fullName>
        <label>Assign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fourth_cons_end_date__c</fullName>
        <label>Assign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Cons_End_Date__c</fullName>
        <label>Assign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Task_Assignee__c</fullName>
        <formula>(Scrum_Manager__r.Primary_Task_Assignee__r.FirstName) + &quot; &quot; + (Scrum_Manager__r.Primary_Task_Assignee__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Task Assignee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fifth_cons_Start_Date__c</fullName>
        <label>Assign Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>third_cons_start_date__c</fullName>
        <label>Assign Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3rd_Functional_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3rd Functional Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fourth_cons_start_date__c</fullName>
        <label>Assign Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Testers_to_assign__c</fullName>
        <label>No. of Testers to Assign</label>
        <precision>6</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Cons_End_Date__c</fullName>
        <label>Assign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secondary_Task_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Task Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sec_Test_Assign_End_Date__c</fullName>
        <label>Assign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prim_Test_Assign_End_Date__c</fullName>
        <label>Assign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3rd_Consultant_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3rd Consultant/ Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X4th_Consultant_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>4th Consultant/ Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X5th_Consultant_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>5th Consultant / Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Solution_Architect__c</fullName>
        <formula>(Scrum_Manager__r.Primary_Solution_Architect__r.FirstName) + &quot; &quot; + (Scrum_Manager__r.Primary_Solution_Architect__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Solution Architect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Test_Assign_End_Date__c</fullName>
        <label>Assign End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secondary_Solution_Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Third_Test_Assign_Start_Date__c</fullName>
        <label>Assign Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Developers_to_be_aligned__c</fullName>
        <label>No. of Developers To Assign</label>
        <precision>6</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Assignment_Opportunity__c</fullName>
        <formula>Scrum_Manager__r.Opportunity__r.Name</formula>
        <label>Project Assignment / Opportunity</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>No_of_Testers_greater_than_3</fullName>
        <active>true</active>
        <errorConditionFormula>No_of_Testers_to_assign__c &gt;3</errorConditionFormula>
        <errorMessage>Only 3 Functional Testers can be assigned to a Scrum Task. Please get in touch with Scrum Owner to request additional resources.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_No_of_Developers_greater_than_5</fullName>
        <active>true</active>
        <errorConditionFormula>No_of_Developers_to_be_aligned__c &gt;5</errorConditionFormula>
        <errorMessage>Only 5 Developers/Consultant can be assigned to a Scrum Task. Please get in touch with Scrum Owner to request additional resources.</errorMessage>
    </validationRules>
</CustomObject>